Fix Combobox dropdown list being cutoff
If a `Combobox` is close to the end of the page the dropdown list is
cutoff if the length of the list exceeds the section.
Removing `overflow-y: auto!important` from the sections css causes the
section to adapt to the change of the pages length when opening the
dropdown list.

--- a/branding/css/susemanager-theme.less
+++ b/branding/css/susemanager-theme.less
@@ -180,7 +180,6 @@ section {
     padding-right: 4em;
     padding-top: 0;
     padding-bottom: 4em;
-    overflow-y: auto!important;
     float: right;
   }
 }
