--- a/branding/css/uyuni/uyuni-theme.less
+++ b/branding/css/uyuni/uyuni-theme.less
@@ -173,7 +173,6 @@ section {
     padding-right: 2em;
     padding-top: 0;
     padding-bottom: 2em;
-    overflow-y: auto!important;
     float: right;
   }
 }
